Updated analysis functions and plotting logic

--- a/OTMODE_code.ipynb
+++ b/OTMODE_code.ipynb
@@ -633,6 +633,357 @@
    "id": "86a6b2e2-4f08-4d3d-a17a-f00d723fc620",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "\n",
+    "def plot_ot_sinkhorn_distances(\n",
+    "    df,\n",
+    "    x='Cell_Type_Prediction',\n",
+    "    y='Observed_OT_Distance',\n",
+    "    hue='Target_Cluster',\n",
+    "    figsize=(20, 8),\n",
+    "    title='OT Sinkhorn Distances per Cluster and Cell Type\\nwith Bonferroni-Adjusted p-values',\n",
+    "    palette='tab20',\n",
+    "    save_path=None\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Plots a bar chart of OT Sinkhorn distances grouped by predicted cell types and true clusters.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - df: pandas DataFrame containing the data\n",
+    "    - x: column name for x-axis (default: 'Cell_Type_Prediction')\n",
+    "    - y: column name for y-axis (default: 'Observed_OT_Distance')\n",
+    "    - hue: column name for grouping (default: 'Target_Cluster')\n",
+    "    - figsize: tuple for figure size (default: (20, 8))\n",
+    "    - title: plot title\n",
+    "    - palette: seaborn color palette (default: 'tab20')\n",
+    "    - save_path: if provided, saves the plot to the given file path\n",
+    "    \"\"\"\n",
+    "    # Sort by OT distance within each cluster (optional for better visuals)\n",
+    "    df_sorted = (\n",
+    "        df.groupby(hue, group_keys=False)\n",
+    "        .apply(lambda x_: x_.sort_values(by=y, ascending=True))\n",
+    "    )\n",
+    "\n",
+    "    # Create the plot\n",
+    "    plt.figure(figsize=figsize)\n",
+    "    sns.set(style=\"whitegrid\")\n",
+    "\n",
+    "    sns.barplot(\n",
+    "        data=df_sorted,\n",
+    "        x=x,\n",
+    "        y=y,\n",
+    "        hue=hue,\n",
+    "        palette=palette\n",
+    "    )\n",
+    "\n",
+    "    plt.legend(title='True Cell Type Annotation', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
+    "    plt.xticks(rotation=45, ha='right', fontsize=12)\n",
+    "    plt.yticks(fontsize=12)\n",
+    "    plt.xlabel('Predicted Cell Type Annotation', fontsize=12)\n",
+    "    plt.ylabel('Observed OT Sinkhorn Distance', fontsize=12)\n",
+    "    plt.title(title, fontsize=16)\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    if save_path:\n",
+    "        plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8c357c0-3ae9-48c2-9c2a-9952feed38f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the assign_cell_types function as shown above\n",
+    "def assign_cell_types(df, adjusted_pval_col='Adjusted_p-value', pval_threshold=0):\n",
+    "    \"\"\"\n",
+    "    Assigns cell types to target clusters based on the highest Observed_OT_Distance among significant associations.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - df (pd.DataFrame): DataFrame containing the results with columns:\n",
+    "        ['Cell_Type_Prediction', 'Target_Cluster', 'Observed_OT_Distance', 'p-value', 'Adjusted_p-value']\n",
+    "    - adjusted_pval_col (str): Name of the column containing adjusted p-values.\n",
+    "    - pval_threshold (float): Threshold to determine significance (e.g., 0 for p <= 0).\n",
+    "\n",
+    "    Returns:\n",
+    "    - cluster_to_celltype (dict): Mapping from Target_Cluster to Cell_Type_Prediction.\n",
+    "    - df_top_clusters (pd.DataFrame): DataFrame containing the top Target_Cluster for each Cell_Type_Prediction.\n",
+    "    \"\"\"\n",
+    "    # Step 1: Filter for significant associations\n",
+    "    df_sig = df[df[adjusted_pval_col] <= pval_threshold].copy()\n",
+    "\n",
+    "    # Ensure 'Observed_OT_Distance' is numeric\n",
+    "    df_sig['Observed_OT_Distance'] = pd.to_numeric(df_sig['Observed_OT_Distance'], errors='coerce')\n",
+    "\n",
+    "    # Drop rows with missing Observed_OT_Distance\n",
+    "    df_sig = df_sig.dropna(subset=['Observed_OT_Distance'])\n",
+    "\n",
+    "    # Step 2: For each Cell_Type_Prediction, find the Target_Cluster with the highest Observed_OT_Distance\n",
+    "    df_top_clusters = df_sig.loc[df_sig.groupby('Cell_Type_Prediction')['Observed_OT_Distance'].idxmax()].reset_index(drop=True)\n",
+    "\n",
+    "    # Step 3: Create a mapping from Target_Cluster to Cell_Type_Prediction\n",
+    "    cluster_to_celltype = pd.Series(\n",
+    "        df_top_clusters.Cell_Type_Prediction.values,\n",
+    "        index=df_top_clusters.Target_Cluster\n",
+    "    ).to_dict()\n",
+    "\n",
+    "    return cluster_to_celltype, df_top_clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9151e26f-7f89-40d2-8e5f-293744464c8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perform_annotation_analysis(marker_genes, adata, target_cluster, n_pc, num_permutations=1000, lambda_reg=10):\n",
+    "    \"\"\"\n",
+    "    Perform OT Sinkhorn distance calculation and permutation test for a given set of marker genes.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - marker_genes: list of gene names to use for the analysis\n",
+    "    - adata: AnnData object containing your single-cell data\n",
+    "    - target_cluster: the cluster label (from 'louvain') to define group0\n",
+    "    - num_permutations: number of permutations for the permutation test\n",
+    "    - lambda_reg: regularization parameter for Sinkhorn\n",
+    "\n",
+    "    Returns:\n",
+    "    - observed_distance: Observed OT Sinkhorn distance\n",
+    "    - p_value: p-value from the permutation test\n",
+    "    \"\"\"\n",
+    "    # Set random seed for reproducibility\n",
+    "    np.random.seed(666)\n",
+    "    \n",
+    "    # Step 1: Define Group0 and Group1 based on target_cluster\n",
+    "    group0 = adata[adata.obs['leiden'] == target_cluster]\n",
+    "    group1 = adata[adata.obs['leiden'] != target_cluster]\n",
+    "\n",
+    "    # Check if both groups have enough cells\n",
+    "    if group0.n_obs == 0 or group1.n_obs == 0:\n",
+    "        print(f\"Insufficient cells in group0 or group1 for cluster {target_cluster}.\")\n",
+    "        return np.nan, np.nan\n",
+    "\n",
+    "    # Step 2: Extract gene expression data for the marker genes\n",
+    "    group0_marker = group0[:, marker_genes]\n",
+    "    group1_marker = group1[:, marker_genes]\n",
+    "\n",
+    "    # Verify that marker genes are present\n",
+    "    if group0_marker.shape[1] == 0 or group1_marker.shape[1] == 0:\n",
+    "        print(f\"No marker genes found for the provided list in cluster {target_cluster}. Skipping.\")\n",
+    "        return np.nan, np.nan\n",
+    "\n",
+    "    # Step 3: Convert to DataFrame for easier manipulation\n",
+    "    df_expression_group0 = pd.DataFrame(group0_marker.X.toarray(), columns=group0_marker.var_names)\n",
+    "    df_expression_group1 = pd.DataFrame(group1_marker.X.toarray(), columns=group1_marker.var_names)\n",
+    "\n",
+    "    # Step 4: Perform PCA for dimensionality reduction\n",
+    "    pca = PCA(n_components=n_pc)\n",
+    "    group0_pcs = pca.fit_transform(df_expression_group0)\n",
+    "    group1_pcs = pca.fit_transform(df_expression_group1)  # Use transform to maintain PCA space\n",
+    "\n",
+    "    # Step 5: Fit KDE for both groups in PCA space\n",
+    "    try:\n",
+    "        kde_group0 = stats.gaussian_kde(group0_pcs.T, bw_method='scott')\n",
+    "        kde_group1 = stats.gaussian_kde(group1_pcs.T, bw_method='scott')\n",
+    "    except np.linalg.LinAlgError:\n",
+    "        print(f\"KDE failed for cluster {target_cluster}. Possibly due to singular data.\")\n",
+    "        return np.nan, np.nan\n",
+    "\n",
+    "    # Evaluate densities\n",
+    "    density_group0 = kde_group0(group0_pcs.T)\n",
+    "    density_group1 = kde_group1(group1_pcs.T)\n",
+    "\n",
+    "    # Step 6: Normalize densities to create probability distributions\n",
+    "    mu = (density_group0 - density_group0.min()) / (density_group0.max() - density_group0.min())\n",
+    "    nu = (density_group1 - density_group1.min()) / (density_group1.max() - density_group1.min())\n",
+    "\n",
+    "    # Step 7: Compute the cost matrix between cells in the two groups\n",
+    "    X_group0 = df_expression_group0.values\n",
+    "    X_group1 = df_expression_group1.values\n",
+    "    cost_matrix = ot.dist(X_group0, X_group1, metric='euclidean')\n",
+    "    cost_matrix_norm = (cost_matrix - cost_matrix.min()) / (cost_matrix.max() - cost_matrix.min())\n",
+    "\n",
+    "    # Step 8: Compute the OT Sinkhorn plan and distance\n",
+    "    transport_plan = ot.sinkhorn(mu, nu, cost_matrix_norm, lambda_reg)\n",
+    "    observed_distance = np.sum(transport_plan * cost_matrix_norm)\n",
+    "\n",
+    "    # Step 9: Permutation Test\n",
+    "    combined_X = np.vstack([X_group0, X_group1])\n",
+    "    n_group0 = X_group0.shape[0]\n",
+    "    n_group1 = X_group1.shape[0]\n",
+    "    permuted_distances = []\n",
+    "\n",
+    "    for i in range(num_permutations):\n",
+    "        # Shuffle the combined data\n",
+    "        permuted_indices = np.random.permutation(combined_X.shape[0])\n",
+    "        perm_group0 = combined_X[permuted_indices[:n_group0], :]\n",
+    "        perm_group1 = combined_X[permuted_indices[n_group0:], :]\n",
+    "\n",
+    "        # Perform PCA on permuted groups using the original PCA model\n",
+    "        try:\n",
+    "            perm_group0_pcs = pca.transform(perm_group0)\n",
+    "            perm_group1_pcs = pca.transform(perm_group1)\n",
+    "        except ValueError:\n",
+    "            # In case the permutation results in invalid data for PCA\n",
+    "            permuted_distances.append(np.nan)\n",
+    "            continue\n",
+    "\n",
+    "        # Fit KDE for permuted groups\n",
+    "        try:\n",
+    "            kde_perm_group0 = stats.gaussian_kde(perm_group0_pcs.T, bw_method='scott')\n",
+    "            kde_perm_group1 = stats.gaussian_kde(perm_group1_pcs.T, bw_method='scott')\n",
+    "            # Evaluate densities\n",
+    "            density_perm_group0 = kde_perm_group0(perm_group0_pcs.T)\n",
+    "            density_perm_group1 = kde_perm_group1(perm_group1_pcs.T)\n",
+    "        except np.linalg.LinAlgError:\n",
+    "            # In case KDE fails due to singular data\n",
+    "            permuted_distances.append(np.nan)\n",
+    "            continue\n",
+    "\n",
+    "        # Normalize densities\n",
+    "        mu_perm = (density_perm_group0 - density_perm_group0.min()) / (density_perm_group0.max() - density_perm_group0.min())\n",
+    "        nu_perm = (density_perm_group1 - density_perm_group1.min()) / (density_perm_group1.max() - density_perm_group1.min())\n",
+    "\n",
+    "        # Compute cost matrix for permuted groups\n",
+    "        cost_matrix_perm = ot.dist(perm_group0, perm_group1, metric='euclidean')\n",
+    "        cost_matrix_perm_norm = (cost_matrix_perm - cost_matrix_perm.min()) / (cost_matrix_perm.max() - cost_matrix_perm.min())\n",
+    "\n",
+    "        # Compute OT Sinkhorn distance for permuted data\n",
+    "        transport_plan_perm = ot.sinkhorn(mu_perm, nu_perm, cost_matrix_perm_norm, lambda_reg)\n",
+    "        ot_distance_perm = np.sum(transport_plan_perm * cost_matrix_perm_norm)\n",
+    "        permuted_distances.append(ot_distance_perm)\n",
+    "\n",
+    "    # Remove NaN values resulting from failed permutations\n",
+    "    permuted_distances = np.array(permuted_distances)\n",
+    "    permuted_distances = permuted_distances[~np.isnan(permuted_distances)]\n",
+    "\n",
+    "    # Calculate p-value\n",
+    "    if len(permuted_distances) == 0:\n",
+    "        p_value = np.nan\n",
+    "    else:\n",
+    "        p_value = np.mean(permuted_distances >= observed_distance)\n",
+    "\n",
+    "    return observed_distance, p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40ff7dcf-9400-45b3-9701-2d0b00d5887b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the assign_cell_types function as shown above\n",
+    "def assign_cell_types(df, adjusted_pval_col='Adjusted_p-value', pval_threshold=0):\n",
+    "    \"\"\"\n",
+    "    Assigns cell types to target clusters based on the highest Observed_OT_Distance among significant associations.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - df (pd.DataFrame): DataFrame containing the results with columns:\n",
+    "        ['Cell_Type_Prediction', 'Target_Cluster', 'Observed_OT_Distance', 'p-value', 'Adjusted_p-value']\n",
+    "    - adjusted_pval_col (str): Name of the column containing adjusted p-values.\n",
+    "    - pval_threshold (float): Threshold to determine significance (e.g., 0 for p <= 0).\n",
+    "\n",
+    "    Returns:\n",
+    "    - cluster_to_celltype (dict): Mapping from Target_Cluster to Cell_Type_Prediction.\n",
+    "    - df_top_clusters (pd.DataFrame): DataFrame containing the top Target_Cluster for each Cell_Type_Prediction.\n",
+    "    \"\"\"\n",
+    "    # Step 1: Filter for significant associations\n",
+    "    df_sig = df[df[adjusted_pval_col] <= pval_threshold].copy()\n",
+    "\n",
+    "    # Ensure 'Observed_OT_Distance' is numeric\n",
+    "    df_sig['Observed_OT_Distance'] = pd.to_numeric(df_sig['Observed_OT_Distance'], errors='coerce')\n",
+    "\n",
+    "    # Drop rows with missing Observed_OT_Distance\n",
+    "    df_sig = df_sig.dropna(subset=['Observed_OT_Distance'])\n",
+    "\n",
+    "    # Step 2: For each Cell_Type_Prediction, find the Target_Cluster with the highest Observed_OT_Distance\n",
+    "    df_top_clusters = df_sig.loc[df_sig.groupby('Cell_Type_Prediction')['Observed_OT_Distance'].idxmax()].reset_index(drop=True)\n",
+    "\n",
+    "    # Step 3: Create a mapping from Target_Cluster to Cell_Type_Prediction\n",
+    "    cluster_to_celltype = pd.Series(\n",
+    "        df_top_clusters.Cell_Type_Prediction.values,\n",
+    "        index=df_top_clusters.Target_Cluster\n",
+    "    ).to_dict()\n",
+    "\n",
+    "    return cluster_to_celltype, df_top_clusters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dce5a0c3-5e19-4a40-9931-a76ebfb2a895",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4da09b64-7283-461c-990c-d5b86e4fc3d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6cccab5-97ce-48b7-9eaa-edd4fb196f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03bef1cd-9791-4ca5-9053-e570965d9f0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa0c0bac-62cc-4576-9cd5-4069f5dd1fd6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c57a2ae-c4ed-4e56-a057-30e7fdd3ebd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbd13058-8cd8-4dea-a135-5a637e9e98c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fd0016d-5110-45b4-ab6f-77e677370d04",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
