WIP: Save progress before rebase

--- a/tutorials/OTMODE_App1_Tutorial.ipynb
+++ b/tutorials/OTMODE_App1_Tutorial.ipynb
@@ -1,25 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "fb214983-c45d-47ae-a45c-9c96fc9cff75",
-   "metadata": {
-    "scrolled": true,
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "0d1823f1",
+   "metadata": {},
    "source": [
-    "# !pip install pyDESeq2\n",
-    "\n",
-    "# !pip install scvi-tools\n",
-    "\n",
-    "# !pip install matplotlib-venn"
+    "This notebook analyzes B cells from single-cell RNA-seq data, comparing gene expression between two conditions: aHD (likely healthy donors) and aSLE (Systemic Lupus Erythematosus patients). The analysis uses the scanpy package for preprocessing and visualization, and custom Python functions for filtering genes.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "746ab4fc-154f-42cd-a48d-6798751da67b",
    "metadata": {
     "tags": []
@@ -28,33 +19,25 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from matplotlib_venn import venn3, venn2\n",
     "import matplotlib.pyplot as plt\n",
     "import ot\n",
     "from sklearn.decomposition import PCA\n",
     "import seaborn as sns\n",
-    "from scipy import stats\n",
-    "from scipy.stats import norm\n",
-    "from statsmodels.stats.multitest import multipletests\n",
-    "from sklearn.metrics import roc_curve, auc\n",
-    "from sklearn.metrics import precision_recall_curve, average_precision_score\n",
-    "from scipy.stats import ranksums\n",
-    "from scipy.stats import ttest_ind\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
+    "import scanpy as sc\n",
+    "import anndata as ad\n",
+    "\n",
     "import time\n",
+    "import warnings\n",
     "\n",
-    "from pydeseq2.dds import DeseqDataSet\n",
-    "from pydeseq2.ds import DeseqStats\n",
-    "import scvi\n",
-    "from statsmodels.discrete.count_model import ZeroInflatedNegativeBinomialP\n",
-    "\n",
-    "import scanpy as sc"
+    "# Suppress warnings for cleaner output\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "210d062d-6b87-46b2-8eb9-e3dffed5e0d5",
    "metadata": {
     "tags": []
@@ -65,8 +48,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dddee302",
+   "metadata": {},
+   "source": [
+    "Filtering the dataset to keep only B cells based on the annotation column level1_anno."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "e7076dd1-ae9d-402b-9f0a-2b8d97b60823",
    "metadata": {},
    "outputs": [],
@@ -75,8 +66,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8facb5b7",
+   "metadata": {},
+   "source": [
+    "Performing PCA and plotting the cells colored by experimental group (e.g., aHD vs aSLE) to visualize transcriptional variation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "d1b4cb44-ec62-464f-a624-b5cd4583792a",
    "metadata": {
     "tags": []
@@ -119,6 +118,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3de50a1",
+   "metadata": {},
+   "source": [
+    "Lets check how many cells (n_obs) and genes (n_vars) remain after filtering. Also see metadata in .obs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "id": "bacb1cd9-7b2b-4333-94d0-6808b9455476",
@@ -148,13 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "0cc1d4f9-15f2-4786-8020-3ac180295503",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import anndata as ad\n",
+    "\n",
     "\n",
     "def filter_genes_expressed_in_both_groups(\n",
     "    adata: ad.AnnData,\n",
@@ -188,6 +194,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ad38362",
+   "metadata": {},
+   "source": [
+    "Keeping only genes that are expressed in at least 5 cells in both groups (aHD, aSLE), ensuring fair comparisons."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "id": "73fa88b2-25b4-4d3c-bf76-2a850bcad6d8",
@@ -205,17 +219,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "e304099d-782b-4c56-8dab-26f72fde0381",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import anndata as ad\n",
-    "\n",
     "def extract_group_expression(\n",
     "    adata: ad.AnnData,\n",
     "    group_column: str,\n",
@@ -290,13 +300,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "64cd82b5-aaa5-4b93-91ea-c869bba5419d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.stats import gaussian_kde\n",
-    "import numpy as np\n",
     "\n",
     "def fit_kde(pcs: np.ndarray, bw_method: str = 'scott') -> gaussian_kde:\n",
     "    \"\"\"\n",
@@ -379,14 +388,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "b8d4c9b1-4e29-4f07-85da-8b74827e5775",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import ot  # POT: Python Optimal Transport\n",
-    "\n",
     "def compute_cost_matrix(\n",
     "    X1: np.ndarray,\n",
     "    X2: np.ndarray,\n",
@@ -444,19 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "1f8e2099-9f67-472e-a2f8-1362625c1e3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import ot\n",
-    "\n",
     "def compute_transport_plan(\n",
     "    mu: np.ndarray,\n",
     "    nu: np.ndarray,\n",
     "    cost_matrix: np.ndarray,\n",
-    "    reg: float = 10.0\n",
+    "    reg: float = 1.0\n",
     ") -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Computes the optimal transport plan using the Sinkhorn algorithm.\n",
@@ -500,13 +503,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "ff7e8c95-da7a-47b3-9846-a59198c825de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def compute_expression_difference(\n",
     "    transport_plan: np.ndarray,\n",
     "    source_expression: np.ndarray,\n",
@@ -553,13 +554,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "e7a99c94-c5d8-4bae-a28b-aa55b305b8a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def compute_standard_error(\n",
     "    expr_diff: np.ndarray,\n",
     "    ddof: int = 1\n",
@@ -600,12 +599,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "a0f41c75-f97a-41a0-a557-ec06f5f245f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "from scipy.stats import norm\n",
     "from statsmodels.stats.multitest import multipletests\n",
     "\n",
@@ -758,14 +756,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "c083b5be-4c8d-40fb-ad79-ffbfa94b3c3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "def plot_pvalue_histogram(\n",
     "    p_values: np.ndarray,\n",
     "    bins: int = 50,\n",
@@ -816,15 +811,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "b505a79f-d16e-4c82-a7a1-1ebc64a33bc4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "\n",
     "def plot_gene_density_comparison(\n",
     "    df_hd: pd.DataFrame,\n",
     "    df_sle: pd.DataFrame,\n",
@@ -895,15 +886,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "6ca49254-cd83-4643-8c44-6e3302f11711",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "\n",
     "def plot_gene_violin_comparison(\n",
     "    df_hd: pd.DataFrame,\n",
     "    df_sle: pd.DataFrame,\n",
@@ -977,15 +964,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "3f55aaea-1472-493f-82ba-7cb6ce9eaf8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
     "def plot_volcano_comparison(\n",
     "    de_results_list,\n",
     "    method_names,\n",
